<resources>
    <string name="app_name">FavoritePet</string>
    <string name="msg_title">선택을 시작하시겠습니까?</string>
    <string name="check_lbl">시작함</string>
    <string name="msg_quest">좋아하는 애완동물은?</string>
    <string name="pet_dog">강아지</string>
    <string name="pet_dolphin">돌고래</string>
    <string name="pet_gorilla">고릴라</string>
    <string name="pet_hen">닭</string>
    <string name="pet_horse">말</string>
    <string name="pet_giraffe">기린</string>
    <string name="pet_turtle">거북이</string>
    <string name="pet_whale">고래</string>
    <string name="pet_monkey">원숭이</string>
    <string name="pet_pandabear">판다</string>
    <string name="pet_penguin">펭귄</string>
</resources>
