<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="benignstar.kr.hs.emirim.favoritepet.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_title"
        android:textSize="20sp" />
    <CheckBox
        android:id="@+id/check_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_lbl"/>
    <TextView
        android:id="@+id/msg_quest"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_quest"
        android:visibility="invisible"/>
    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible">
        <RadioButton
            android:id="@+id/radio_turtle"
            android:text="@string/pet_turtle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/radio_whale"
            android:text="@string/pet_whale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/radio_penguin"
            android:text="@string/pet_penguin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>
    <Button
        android:id="@+id/but_ok"
        android:text="@string/check_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>
    <ImageView
        android:id="@+id/imgv_pet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dog"
        android:visibility="invisible"/>

</LinearLayout>
